exports[`component::DateInput snapshots renders without crashing 1`] = `
<div
  className="m-btn-inside-input">
  <input
    className="a-text-input"
    max={null}
    min={null}
    onChange={[Function]}
    placeholder="mm/dd/yyyy"
    size="15"
    value="" />
  <button
    className="a-btn a-btn__link">
    <span
      className="cf-icon cf-icon-delete" />
  </button>
</div>
`;

exports[`undefined 1`] = `
<div
  className="m-btn-inside-input">
  <input
    className="a-text-input a-text-input__error"
    max={null}
    min={null}
    onChange={[Function]}
    placeholder="mm/dd/yyyy"
    size="15"
    value="foo" />
  <button
    className="a-btn a-btn__link">
    <span
      className="cf-icon cf-icon-delete" />
  </button>
</div>
`;
